--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -60,3 +60,10 @@ body {
   font-optical-sizing: auto;
   color: $font;
 }
+
+body.is-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
