--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -15,12 +15,17 @@
   gap: min((146/1232 * 100vw), rem(146));
   @include mq("md") {
     flex-direction: column;
+    margin-top: rem(40);
+    gap: rem(40);
   }
 }
 
 .about__text {
   width: calc(384 / 1232 * 100%);
   text-align: justify;
+  @include mq("md") {
+    width: 100%;
+  }
 }
 
 .about__body {
@@ -32,6 +37,10 @@
   padding: rem(72) rem(66);
   background-color: $white;
   text-align: center;
+  @include mq("md") {
+    margin-top: rem(60);
+    padding: rem(40) rem(12);
+  }
 }
 
 .about__schedule-head {
@@ -39,4 +48,7 @@
 
 .about__schedule-body {
   margin-top: rem(56);
+  @include mq("md") {
+    margin-top: rem(40);
+  }
 }
