--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -187,23 +187,21 @@
 }
 
 .header__drawer {
-  padding: rem(228) 0;
+  padding: rem(200) 0;
   position: absolute;
   z-index: 900;
   top: 0;
-  right: -100%;
+  left: -100%;
   width: 100%;
   height: 100dvh;
   background-color: $base;
   overflow-y: scroll;
   scrollbar-width: none;
-  transition: right 0.6s ease;
-  display: none;
+  transition: left 0.3s ease;
 }
 
 .header__drawer.is-open {
-  right: 0;
-  display: block;
+  left: 0;
 }
 
 .header__drawer::-webkit-scrollbar {
