--- a/src/sass/module/_logo.scss
+++ b/src/sass/module/_logo.scss
@@ -8,6 +8,9 @@
 
 .logo__icon {
   width: rem(40);
+  @include mq("md") {
+    width: rem(32);
+  }
 }
 
 .logo__icon img {
@@ -22,4 +25,7 @@
   font-weight: $regular;
   line-height: 1;
   letter-spacing: 0.03em;
+  @include mq("md") {
+    font-size: rem(20);
+  }
 }
