--- a/src/sass/module/_member-card.scss
+++ b/src/sass/module/_member-card.scss
@@ -28,6 +28,9 @@
   line-height: 1;
   background-color: $white;
   padding: rem(26) rem(48) rem(14) rem(20);
+  @include mq("md") {
+    padding: rem(20) rem(32) rem(10) rem(20);
+  }
 }
 
 .member-card__body {
@@ -36,6 +39,9 @@
   flex-grow: 1;
   padding: rem(2) rem(20) rem(32);
   background-color: $white;
+  @include mq("md") {
+    padding: rem(2) rem(20) rem(24);
+  }
 }
 
 .member-card__name {
@@ -49,4 +55,7 @@
 .member-card__text {
   margin-top: rem(32);
   flex-grow: 1;
+  @include mq("md") {
+    margin-top: rem(24);
+  }
 }
