--- a/src/sass/module/_section-head.scss
+++ b/src/sass/module/_section-head.scss
@@ -13,7 +13,7 @@
   line-height: 1;
   letter-spacing: 0.05em;
   @include mq("md") {
-    font-size: 32px;
+    font-size: rem(36);
   }
 }
 
@@ -24,8 +24,8 @@
   line-height: 1;
   transition: color 0.3s ease;
   @include mq("md") {
-    margin-top: rem(2);
-    font-size: 12px;
+    margin-top: rem(12);
+    font-size: rem(15);
   }
 }
 
@@ -35,10 +35,16 @@
 
 .section-head--small .section-head__en {
   font-size: rem(24);
+  @include mq("md") {
+    font-size: rem(36);
+  }
 }
 
 .section-head--small .section-head__ja {
   margin-top: rem(24);
+  @include mq("md") {
+    margin-top: rem(12);
+  }
 }
 
 .section-head--white {
@@ -53,8 +59,15 @@
   @extend .section-head;
 }
 
+.section-head--delta .section-head__en {
+  @include mq("md") {
+    font-size: rem(24);
+  }
+}
+
 .section-head--delta .section-head__ja {
   margin-top: rem(20);
   @include mq("md") {
+    margin-top: rem(12);
   }
 }
