--- a/src/sass/module/_seminar.scss
+++ b/src/sass/module/_seminar.scss
@@ -19,6 +19,9 @@
 
 .seminar__list {
   margin-top: rem(56);
+  @include mq("md") {
+    margin-top: rem(40);
+  }
 }
 
 .seminar__swiper {
@@ -28,78 +31,9 @@
 .seminar__swiper .swiper-slide {
   width: rem(596);
   height: auto;
-}
-
-.swiper {
-}
-
-.jas-seminar-swiper {
-}
-
-.seminar-cards {
-}
-
-.swiper-wrapper {
-}
-
-.seminar-card {
-}
-
-.swiper-slide {
-}
-
-.seminar-card__head {
-}
-
-.seminar-card__title-wrap {
-}
-
-.seminar-card__title {
-}
-
-.seminar-card__title-number {
-}
-
-.seminar-card__title-text {
-}
-
-.seminar-card__img {
-}
-
-.seminar-card__info {
-}
-
-.seminar-card__info-wrap {
-}
-
-.text {
-}
-
-.seminar-card__info-term {
-}
-
-.seminar-card__info-description {
-}
-
-.seminar__swiper-ui {
-}
-
-.js-seminar-swiper-ui {
-}
-
-.seminar__swiper-ui-prev {
-}
-
-.swiper-button-prev {
-}
-
-.seminar__swiper-ui-next {
-}
-
-.swiper-button-next {
-}
-
-.seminar__swiper-ui-scrollbar {
+  @include mq("md") {
+    width: rem(335);
+  }
 }
 
 .seminar__swiper-ui {
@@ -114,10 +48,13 @@
   height: 1px;
   width: calc(1060 / 1232 * 100%);
   background-color: rgba($base, 0.3);
+  @include mq("md") {
+    width: calc(230 / 335 * 100%);
+  }
 }
 
 .seminar__swiper-ui .swiper-scrollbar-drag {
-  width: calc(318 / 1060 * 100%);
+  // width: calc(318 / 1060 * 100%);
   background-color: $base;
 }
 
@@ -127,14 +64,37 @@
   margin-top: initial;
   width: rem(40);
   height: rem(40);
+  @include mq("md") {
+    width: rem(32);
+    height: rem(32);
+  }
+}
+
+.seminar__swiper-ui .swiper-button-prev img,
+.seminar__swiper-ui .swiper-button-next img {
+  aspect-ratio: 40/40;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.seminar__swiper-ui .swiper-button-prev::after,
+.seminar__swiper-ui .swiper-button-next::after {
+  content: initial;
 }
 
 .seminar__swiper-ui .swiper-button-next {
   margin-left: rem(24);
+  @include mq("md") {
+    margin-left: rem(16);
+  }
 }
 
 .seminar__button {
   margin-top: rem(60);
   display: flex;
   justify-content: center;
+  @include mq("md") {
+    margin-top: rem(50);
+  }
 }
