--- a/src/sass/module/_text.scss
+++ b/src/sass/module/_text.scss
@@ -6,6 +6,10 @@
   font-family: $gothic-font;
   line-height: calc(36 / 16);
   letter-spacing: 0.05em;
+  @include mq("md") {
+    font-size: rem(14);
+    line-height: 2;
+  }
 }
 
 .text--white {
