--- a/src/sass/page/_layout-guide.scss
+++ b/src/sass/page/_layout-guide.scss
@@ -1,7 +1,6 @@
 @use "global" as *;
 
-.layout-infomation {
-  margin-top: rem(120);
+.layout-guide {
   @include mq("md") {
     margin-top: rem(80);
   }
