--- a/src/sass/page/_layout-seminar.scss
+++ b/src/sass/page/_layout-seminar.scss
@@ -4,4 +4,8 @@
   margin-top: rem(120);
   padding-top: rem(120);
   border-top: 1px solid $lightgray;
+  @include mq("md") {
+    margin-top: rem(80);
+    padding-top: rem(60);
+  }
 }
