不要なコード削除

--- a/src/sass/module/_about-item.scss
+++ b/src/sass/module/_about-item.scss
@@ -24,6 +24,7 @@
   font-size: rem(28);
   font-weight: $regular;
   line-height: 1;
+  color: $black;
   @include mq("md") {
     font-size: rem(18);
   }
