--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -122,7 +122,7 @@
   width: rem(42);
   height: rem(31);
   display: inline-block;
-  background-image: url(./../images/common/icon-contact.svg);
+  background-image: url(../images/common/icon-contact.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
