--- a/src/sass/module/_about-item.scss
+++ b/src/sass/module/_about-item.scss
@@ -13,8 +13,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: rem(56) rem(10) rem(56) rem(20);
+  padding: rem(56) rem(10) rem(56) 0;
   position: relative;
+  transition: padding-left 0.3s ease;
   @include mq("md") {
     padding: rem(32) rem(10);
   }
@@ -82,6 +83,10 @@
 @media (hover: hover) {
   .about-item:hover {
     background-color: rgba($base, 0.1);
+  }
+
+  .about-item:hover .about-item__link {
+    padding-left: rem(20);
   }
 
   .about-item:hover .about-item__img {
