--- a/src/sass/module/_guide.scss
+++ b/src/sass/module/_guide.scss
@@ -39,17 +39,28 @@
   align-items: center;
   padding-top: rem(85);
   padding-bottom: rem(94);
-  padding-left: calc(70 / 1440 * 100%);
-  padding-right: calc(75 / 1440 * 100%);
   @include mq("md") {
     padding-top: rem(32);
     padding-bottom: rem(32);
   }
 }
 
-.guide__item-link:nth-child(even) {
-  padding-left: calc(75 / 1440 * 100%);
-  padding-right: calc(70 / 1440 * 100%);
+.guide__item:nth-child(odd) .guide__item-link {
+  padding-left: calc(70 / 720 * 100%);
+  padding-right: calc(75 / 720 * 100%);
+  @include mq("md") {
+    padding-left: calc(20 / 375 * 100%);
+    padding-right: calc(20 / 375 * 100%);
+  }
+}
+
+.guide__item:nth-child(even) .guide__item-link {
+  padding-left: calc(75 / 720 * 100%);
+  padding-right: calc(71 / 720 * 100%);
+  @include mq("md") {
+    padding-left: calc(20 / 375 * 100%);
+    padding-right: calc(20 / 375 * 100%);
+  }
 }
 
 .guide__item-icon {
