--- a/src/sass/module/_member.scss
+++ b/src/sass/module/_member.scss
@@ -34,16 +34,11 @@
 }
 
 .member__swiper {
-  margin-right: calc(50% - 50vw);
-  // padding-right: calc(40 / 1232 * 100vw);
-  // padding: 0 rem(40);
+  overflow: visible;
 }
 
 .member__swiper .swiper-slide {
   width: rem(278);
-  @include mq("md") {
-    // width: rem(335);
-  }
 }
 
 .member__swiper-ui {
