--- a/src/sass/module/_seminar.scss
+++ b/src/sass/module/_seminar.scss
@@ -25,8 +25,7 @@
 }
 
 .seminar__swiper {
-  margin-right: calc(50% - 50vw);
-  padding-right: rem(40);
+  overflow: visible;
 }
 
 .seminar__swiper .swiper-slide {
