はじめての方へ

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -46,6 +46,8 @@ $blue: #8390ab;
 $green: #7ca39d;
 $lightgray: #eaeaeb;
 $bg-light: #f8f8f8;
+$bg-lightblue: #f7f9fa;
+$bg-beige: #f0eee1;
 $date-blue: #5a8ae5;
 $date-darkblue: #6687aa;
 $date-yellow: #fec248;
