--- a/src/sass/page/_layout-intro.scss
+++ b/src/sass/page/_layout-intro.scss
@@ -3,7 +3,9 @@
 .layout-intro {
   padding: rem(195) 0 rem(160);
   background-image: linear-gradient($ivory 64.53%, $white);
+  position: relative;
   @include mq("md") {
+    overflow-x: hidden;
     padding: rem(92) 0 rem(80);
   }
 }
