--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -44,6 +44,9 @@ $yellow: #e5e0c6;
 $red: #c38b79;
 $blue: #8390ab;
 $green: #7ca39d;
+$sagegreen: #82a37c;
+$pink: #c37990;
+$purple: #9183ab;
 $lightgray: #eaeaeb;
 $bg-light: #f8f8f8;
 $bg-lightblue: #f7f9fa;
