--- a/src/sass/module/_activity-cards.scss
+++ b/src/sass/module/_activity-cards.scss
@@ -12,112 +12,7 @@
   }
 }
 
-.activity-card {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background-color: $red;
-}
-
-.activity-card__img {
-  width: 100%;
-}
-
-.activity-card__img img {
-  aspect-ratio: 384/270;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.activity-card__body {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: rem(48) rem(36);
-  @include mq("md") {
-    padding: rem(32) rem(20);
-  }
-}
-
-.activity-card__number {
-  display: block;
-  font-size: rem(16);
-  font-weight: $regular;
-  font-family: $en-font;
-  line-height: 1;
-  letter-spacing: 0.05em;
-  color: rgba($white, 0.5);
-}
-
-.activity-card__number::after {
-  counter-increment: number;
-  content: counter(number);
-}
-
-.activity-card__title {
-  display: block;
-  margin-top: rem(10);
-  font-size: rem(28);
-  font-weight: $regular;
-  color: $white;
-  line-height: 1;
-  @include mq(md) {
-    font-size: rem(22);
-  }
-}
-
-.activity-card__text {
-  margin-top: rem(36);
-  flex-grow: 1;
-  color: $white;
-  text-align: justify;
-  font-feature-settings: "palt";
-  @include mq(md) {
-    margin-top: rem(24);
-    font-feature-settings: "palt";
-  }
-}
-
-.activity-card__button {
-  margin-top: rem(48);
-  display: flex;
-  justify-content: center;
-  @include mq("md") {
-    margin-top: rem(32);
-  }
-}
-
-.activity-card--blue {
-  @extend .activity-card;
-  background-color: $blue;
-}
-
-.activity-card--green {
-  @extend .activity-card;
-  background-color: $green;
-}
-
-.activity-card--delta {
-  @extend .activity-card;
-  background-color: $red;
-}
-
-.activity-card--blue-delta {
-  @extend .activity-card;
-  background-color: $blue;
-}
-
-.activity-card--green-delta {
-  @extend .activity-card;
-  background-color: $green;
-}
-
-.activity-card--delta .activity-card__body,
-.activity-card--blue-delta .activity-card__body,
-.activity-card--green-delta .activity-card__body {
-  padding-bottom: rem(60);
-  @include mq("md") {
-    padding-bottom: rem(32);
-  }
+.activity-cards--column2 {
+  @extend .activity-cards;
+  grid-template-columns: repeat(2, 1fr);
 }
