--- a/src/wp-theme/assets/css/style.css
+++ b/src/wp-theme/assets/css/style.css
@@ -257,18 +257,14 @@ select::-ms-expand {
 	margin-top: 3.5rem;
 }
 
-.activity-cards {
-	grid-gap: 2.5rem;
-	counter-reset: number;
-	display: grid;
-	gap: 2.5rem;
-	grid-template-columns: repeat(3, 1fr);
-}
-
 .activity-card,
+.activity-card--sagegreen,
+.activity-card--purple,
+.activity-card--pink,
 .activity-card--green-delta,
 .activity-card--blue-delta,
 .activity-card--delta,
+.activity-card--orange,
 .activity-card--green,
 .activity-card--blue {
 	background-color: #c38b79;
@@ -316,7 +312,7 @@ select::-ms-expand {
 	display: block;
 	font-size: 1.75rem;
 	font-weight: 400;
-	line-height: 1;
+	line-height: 1.4285714286;
 	margin-top: 0.625rem;
 }
 
@@ -342,7 +338,8 @@ select::-ms-expand {
 	background-color: #7ca39d;
 }
 
-.activity-card--delta {
+.activity-card--delta,
+.activity-card--orange {
 	background-color: #c38b79;
 }
 
@@ -354,10 +351,46 @@ select::-ms-expand {
 	background-color: #7ca39d;
 }
 
+.activity-card--pink {
+	background-color: #c37990;
+}
+
+.activity-card--purple {
+	background-color: #9183ab;
+}
+
+.activity-card--sagegreen {
+	background-color: #82a37c;
+}
+
 .activity-card--delta .activity-card__body,
+.activity-card--orange .activity-card__body,
 .activity-card--blue-delta .activity-card__body,
-.activity-card--green-delta .activity-card__body {
+.activity-card--green-delta .activity-card__body,
+.activity-card--pink .activity-card__body,
+.activity-card--purple .activity-card__body,
+.activity-card--sagegreen .activity-card__body {
 	padding-bottom: 3.75rem;
+}
+
+.activity-card--orange .activity-card__img img,
+.activity-card--pink .activity-card__img img,
+.activity-card--purple .activity-card__img img,
+.activity-card--sagegreen .activity-card__img img {
+	aspect-ratio: 593/270;
+}
+
+.activity-cards,
+.activity-cards--column2 {
+	grid-gap: 2.5rem;
+	counter-reset: number;
+	display: grid;
+	gap: 2.5rem;
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.activity-cards--column2 {
+	grid-template-columns: repeat(2, 1fr);
 }
 
 .activity__list {
@@ -579,6 +612,85 @@ select::-ms-expand {
 
 .faq--large .faq__head {
 	text-align: center;
+}
+
+.flow-item {
+	display: flex;
+	gap: 6.4935064935%;
+}
+
+.flow-item__left {
+	align-items: center;
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	position: relative;
+}
+
+.flow-item__left::after {
+	background-color: #cbb94f;
+	content: "";
+	display: block;
+	height: 88.8077858881%;
+	margin-top: 0.5rem;
+	position: absolute;
+	top: 4.875rem;
+	width: 1px;
+}
+
+.flow-list__item:last-child .flow-item__left::after {
+	height: 77.3255813953%;
+}
+
+.flow-item__number::before {
+	color: #cbb84f;
+	content: counter(flow-item-counter);
+	display: block;
+	font-family: "EB Garamond", serif;
+	font-size: 3rem;
+	font-weight: 400;
+	letter-spacing: 0.05em;
+	line-height: 1;
+}
+
+.flow-item__right {
+	background-color: #fff;
+	padding: 3.75rem 4.125rem;
+	width: 91.3961038961%;
+}
+
+.flow-list__item:not(:first-child) .flow-item__right {
+	padding-bottom: 4.4375rem;
+}
+
+.flow-item__text {
+	border-top: 1px solid #eaeaeb;
+	margin-top: 0.75rem;
+	padding-top: 1rem;
+	text-align: justify;
+}
+
+.flow-item__buttons {
+	display: flex;
+	gap: 1.5rem;
+	margin-top: 1.5rem;
+}
+
+.flow-item__button {
+	max-width: 17.375rem;
+	width: 100%;
+}
+
+.flow-list {
+	counter-reset: flow-item-counter;
+}
+
+.flow-list__item {
+	counter-increment: flow-item-counter;
+}
+
+.flow-list__item:not(:first-child) {
+	margin-top: 4rem;
 }
 
 .footer {
@@ -1835,6 +1947,14 @@ select::-ms-expand {
 	width: 100%;
 }
 
+.sub-flow__head {
+	text-align: center;
+}
+
+.sub-flow__list {
+	margin-top: 3.75rem;
+}
+
 .sub-fv {
 	overflow-x: hidden;
 	padding-bottom: 3.75rem;
@@ -1894,6 +2014,22 @@ select::-ms-expand {
 
 .sub-member__faq {
 	margin-top: 7.5rem;
+}
+
+.sub-read {
+	text-align: center;
+}
+
+.sub-read__text {
+	margin-bottom: -0.5rem;
+}
+
+.sub-reward__head {
+	text-align: center;
+}
+
+.sub-reward__list {
+	margin-top: 5rem;
 }
 
 .text-accent {
@@ -2000,13 +2136,33 @@ select::-ms-expand {
 	margin-top: 7.5rem;
 }
 
+.layout-sub-flow {
+	background-image: linear-gradient(to bottom, #f7f6f0 64.53%, #fff);
+	margin-top: 7.5rem;
+	padding: 7.25rem 0 2.875rem;
+}
+
 .layout-sub-intro {
 	background-image: linear-gradient(to bottom, #f7f6f0, #fff 64.53%);
 	padding-top: 5.625rem;
 }
 
+.layout-sub-join {
+	background-color: #f8f8f8;
+	margin-top: 7.5rem;
+	padding: 7.25rem 0 7.5rem;
+}
+
 .layout-sub-member {
 	margin-top: 7.5rem;
+}
+
+.layout-sub-read {
+	margin-top: 5.375rem;
+}
+
+.layout-sub-reward {
+	margin-top: 11.875rem;
 }
 
 @media (hover: hover) {
@@ -2175,13 +2331,6 @@ a[href^="tel:"] {
 	margin-top: 2.5rem;
 }
 
-.activity-cards {
-	-moz-column-gap: 1.5rem;
-	column-gap: 1.5rem;
-	grid-template-columns: 1fr;
-	row-gap: 1.875rem;
-}
-
 .activity-card__body {
 	padding: 2rem 1.25rem;
 }
@@ -2200,9 +2349,28 @@ a[href^="tel:"] {
 }
 
 .activity-card--delta .activity-card__body,
+.activity-card--orange .activity-card__body,
 .activity-card--blue-delta .activity-card__body,
-.activity-card--green-delta .activity-card__body {
+.activity-card--green-delta .activity-card__body,
+.activity-card--pink .activity-card__body,
+.activity-card--purple .activity-card__body,
+.activity-card--sagegreen .activity-card__body {
 	padding-bottom: 2rem;
+}
+
+.activity-card--orange .activity-card__title,
+.activity-card--pink .activity-card__title,
+.activity-card--purple .activity-card__title,
+.activity-card--sagegreen .activity-card__title {
+	font-size: 1.125rem;
+}
+
+.activity-cards,
+.activity-cards--column2 {
+	-moz-column-gap: 1.5rem;
+	column-gap: 1.5rem;
+	grid-template-columns: 1fr;
+	row-gap: 1.875rem;
 }
 
 .activity__list {
@@ -2249,6 +2417,52 @@ a[href^="tel:"] {
 
 .faq--large .faq__img {
 	width: 5.625rem;
+}
+
+.flow-item {
+	position: relative;
+}
+
+.flow-item__left {
+	left: 0.5rem;
+	position: absolute;
+	top: -1.25rem;
+}
+
+.flow-item__left::after {
+	height: 2rem;
+	top: 2rem;
+}
+
+.flow-item__number::before {
+	font-size: 2.25rem;
+}
+
+.flow-item__right {
+	padding: 1.75rem 1.25rem 2.5rem;
+	width: 100%;
+}
+
+.flow-list__item:not(:first-child) .flow-item__right {
+	padding-bottom: 2.5rem;
+}
+
+.flow-item__title {
+	padding-left: 0.625rem;
+}
+
+.flow-item__text {
+	margin-top: 1.25rem;
+}
+
+.flow-item__buttons {
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 2rem;
+}
+
+.flow-list__item:not(:first-child) {
+	margin-top: 3rem;
 }
 
 .footer {
@@ -2700,6 +2914,10 @@ a[href^="tel:"] {
 	aspect-ratio: 375/300;
 }
 
+.sub-flow__list {
+	margin-top: 3.125rem;
+}
+
 .sub-fv {
 	padding-bottom: 2rem;
 }
@@ -2749,6 +2967,14 @@ a[href^="tel:"] {
 
 .sub-member__faq {
 	margin-top: 5rem;
+}
+
+.sub-read {
+	text-align: left;
+}
+
+.sub-reward__list {
+	margin-top: 2.5rem;
 }
 
 .text,
@@ -2833,12 +3059,30 @@ a[href^="tel:"] {
 	margin-top: 5rem;
 }
 
+.layout-sub-flow {
+	margin-top: 5rem;
+	padding: 3.75rem 0;
+}
+
 .layout-sub-intro {
 	padding-top: 3.75rem;
 }
 
+.layout-sub-join {
+	margin-top: 5rem;
+	padding: 3.75rem 0 10rem;
+}
+
 .layout-sub-member {
 	margin-top: 3.75rem;
+}
+
+.layout-sub-read {
+	margin-top: 2.5rem;
+}
+
+.layout-sub-reward {
+	margin-top: 2.5rem;
 }
 
 }
