--- a/src/sass/module/_flow-item.scss
+++ b/src/sass/module/_flow-item.scss
@@ -4,8 +4,6 @@
   display: flex;
   gap: calc(80 / 1232 * 100%);
   @include mq("md") {
-    // flex-direction: column;
-    // align-items: center;
     position: relative;
   }
 }
@@ -19,7 +17,10 @@
   @include mq("md") {
     position: absolute;
     top: rem(-20);
-    left: rem(8);
+    left: 50%;
+    transform: translateX(-50%);
+    // top: rem(-20);
+    // left: rem(8);
     // top: rem(-56);
   }
 }
@@ -34,8 +35,14 @@
   background-color: $base;
   margin-top: rem(8);
   @include mq("md") {
-    top: rem(32);
-    height: rem(32);
+    top: rem(-36);
+    height: rem(26);
+  }
+}
+
+.flow-list__item:first-child .flow-item__left::after {
+  @include mq("md") {
+    content: none;
   }
 }
 
@@ -79,7 +86,10 @@
 
 .flow-item__title {
   @include mq("md") {
-    padding-left: rem(10);
+    text-align: center;
+    overflow-wrap: anywhere;
+    word-break: keep-all;
+  //   padding-left: rem(10);
   }
 }
 
