--- a/src/sass/page/_layout-sub-intro.scss
+++ b/src/sass/page/_layout-sub-intro.scss
@@ -2,8 +2,19 @@
 
 .layout-sub-intro {
   padding-top: rem(90);
-  background-image: linear-gradient(to bottom, $ivory, $white 64.53%);
+  position: relative;
   @include mq("md") {
     padding-top: rem(60);
   }
+}
+
+.layout-sub-intro::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: calc(838 / 1400 * 100vw);
+  background-image: linear-gradient(to bottom, $ivory 64.53%, $white);
+  z-index: -1;
 }
