--- a/src/sass/page/_layout-about.scss
+++ b/src/sass/page/_layout-about.scss
@@ -2,10 +2,10 @@
 
 .layout-about {
   margin-top: rem(120);
-  padding: rem(120) 0;
+  padding-top: rem(120);
   background-image: linear-gradient(to bottom, $ivory 64.53%, $white);
   @include mq("md") {
     margin-top: rem(80);
-    padding: rem(60) 0;
+    padding-top: rem(60);
   }
 }
